--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Test</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  
 <div class="login-box">
   <h2>Login</h2>
   <form>
@@ -18,3 +29,6 @@
     </a>
   </form>
 </div>
+  </body>
+
+</html>
